examples/SimpleExamples/Simple1.jj
/* Copyright (c) 2006, Sun Microsystems, Inc.
 * All rights reserved.
 * 
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 * 
 *     * Redistributions of source code must retain the above copyright notice,
 *       this list of conditions and the following disclaimer.
 *     * Redistributions in binary form must reproduce the above copyright
 *       notice, this list of conditions and the following disclaimer in the
 *       documentation and/or other materials provided with the distribution.
 *     * Neither the name of the Sun Microsystems, Inc. nor the names of its
 *       contributors may be used to endorse or promote products derived from
 *       this software without specific prior written permission.
 * 
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
 * ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
 * LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
 * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
 * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
 * INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
 * CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
 * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF
 * THE POSSIBILITY OF SUCH DAMAGE.
 */


//In this case the option settings are their default values.
//Hence these option settings were really not necessary.
options {
  LOOKAHEAD = 1;
  CHOICE_AMBIGUITY_CHECK = 2;
  OTHER_AMBIGUITY_CHECK = 1;
  STATIC = true;
  DEBUG_PARSER = false;
  DEBUG_LOOKAHEAD = false;
  DEBUG_TOKEN_MANAGER = false;
  ERROR_REPORTING = true;
  JAVA_UNICODE_ESCAPE = false;
  UNICODE_INPUT = false;
  IGNORE_CASE = false;
  USER_TOKEN_MANAGER = false;
  USER_CHAR_STREAM = false;
  BUILD_PARSER = true;
  BUILD_TOKEN_MANAGER = true;
  SANITY_CHECK = true;
  FORCE_LA_CHECK = false;
}

//This is the name that is used as the prefix for the Java files generated by the parser generator.  
PARSER_BEGIN(Simple1)

/** Simple brace matcher. */
public class Simple1 {

  /** Main entry point. */
  public static void main(String args[]) throws ParseException {
    Simple1 parser = new Simple1(System.in);
    parser.Input(); // one may parse with respect to any grammar non-terminal.
  }

}

PARSER_END(Simple1)

// Below: two productions, that define the non-terminals "Input" and "MatchedBraces"

/** Root production. */

// non-terminal
// LHS          : RHS
// void Input() : rest

//When the non-terminal is used on the left-hand side of a production, it is
//considered to be declared and its syntax follows the Java syntax.  
//On the right-hand side its use is similar to a method call in Java.
void Input() :
{}
{
  MatchedBraces() ("\n"|"\r")* <EOF>
                             //<EOF> is a lexical token regular expression
}

/** Brace matching production. */

void MatchedBraces() :
{}
// The following block is what the non-terminal expands to (called an "expansion")
//
// Other possible expansions:
//   e1 | e2 | e3 | ... : A choice of e1, e2, e3, etc.
//   ( e )+             : One or more occurrences of e
//   ( e )*             : Zero or more occurrences of e
//   (( e1 | e2 )* [ e3 ] ) | e4
{
  "{" [ MatchedBraces() ] "}"
    //[ MatchedBraces() ] is an optional nested expansion of "MatchedBraces" 
    // [...] may also be written as (...)?

}
